--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Base URL app will be served at. Use localhost for local development, your domain for production.
-APP_HOST_URL="http://localhost:1262"
+APP_HOST_URL="https://copyhack.ondigitalocean.app/"
 
 # Disable sign ups. Good for testing in production before initial launch.
 APP_SIGNUP_ENABLED="true"
