--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ APP_SIGNUP_ENABLED="true"
 APP_HTTPS_ONLY="false"
 
 # Randomly generated secret key for Express session.
-APP_SECRET="????????????????????????????????"
+APP_SECRET="TjWnZr4u7x!A%D*F-JaNdRgUkXp2s5v8"
 
 # Logging config, see Pino for details: https://getpino.io/#/docs/api?id=loggerlevel-string-gettersetter.
 LOGGER_LEVEL="info"
@@ -19,7 +19,7 @@ INITIAL_SYSTEM_ADMIN_EMAIL="hello@copyhack.com"
 
 # Company config used to display name throughout app.
 COMPANY_SHORT_NAME="CopyHack"
-COMPANY_LEGAL_NAME="Hubmind Inc."
+COMPANY_LEGAL_NAME="Hubmind LLC"
 COMPANY_GENERAL_EMAIL="hello@copyhack.com"
 
 # Development database config.
@@ -38,22 +38,22 @@ DB_PROD_DATABASE="DB_PROD"
 DB_ENVIRONMENT="development"
 
 # Randomly generated secret key used for machine to machine authentication.
-OPS_AUTH_KEY="????????????????????????????????"
+OPS_AUTH_KEY=")H@McQfTjWnZq4t7w!z%C*F-JaNdRgUk"
 
 # Email config.
-EMAIL_SMTP_HOST=""
-EMAIL_SMTP_PORT=""
-EMAIL_SMTP_AUTH_USER=""
-EMAIL_SMTP_AUTH_PASS=""
-EMAIL_FROM_ADDRESS=""
+EMAIL_SMTP_HOST="smtp.mailgun.org"
+EMAIL_SMTP_PORT="587"
+EMAIL_SMTP_AUTH_USER="hello@mg.copyhack.com"
+EMAIL_SMTP_AUTH_PASS="a6405ef2146f9a86e0ad33ed3398a648-b0ed5083-3ab8f835"
+EMAIL_FROM_ADDRESS="hello@copyhack.com"
 
 # Stripe secrets from Stipe console.
-STRIPE_PUBLISHABLE_KEY="pk_???????????????????????????????????????????????????????????????????????????????????????????????????"
-STRIPE_SECRET_KEY="sk_???????????????????????????????????????????????????????????????????????????????????????????????????"
-STRIPE_WEBHOOK_SECRET="whsec_????????????????????????????????"
+STRIPE_PUBLISHABLE_KEY="pk_test_oCrBiIY2FuFSD6eZJlBA1H0p00qee59lCk"
+STRIPE_SECRET_KEY="sk_test_N0QAhOehRWyyt0F1iPtTITK500v23oTa1j"
+STRIPE_WEBHOOK_SECRET="whsec_rDTOuNn8Yber6wHfAxEeqNF4dn0YpRIg"
 
 # Cookie used for Jest tests.
-TEST_COOKIE="connect.sid=???????????????????????????????????????????????????????????????????????????????????????????????????"
+TEST_COOKIE="connect.sid=G22wOJoUAhhemRQqCs7dAGlMIk5ZGaJUg"
 
 # Randomly generated secret key used by crypto utility.
-CRYPTO_KEY="????????????????????????????????"
+CRYPTO_KEY="?NcRfUjXn2r5u8x/A?D*G-KaPdSgVkYp3"
