--- a/.env
+++ b/.env
@@ -26,13 +26,13 @@ COMPANY_GENERAL_EMAIL="hello@copyhack.com"
 DB_DEV_HOST="db-copyhack-postgresql-nyc1-do-user-10528061-0.b.db.ondigitalocean.com"
 DB_DEV_USER="doadmin"
 DB_DEV_PASSWORD="AVNS_Cvj2y4K46bYgTcmNnHs"
-DB_DEV_DATABASE="DB_DEV"
+DB_DEV_DATABASE="DB_DEV_LIVE"
 
 # Production database config.
 DB_PROD_HOST="db-copyhack-postgresql-nyc1-do-user-10528061-0.b.db.ondigitalocean.com"
 DB_PROD_USER="doadmin"
 DB_PROD_PASSWORD="AVNS_Cvj2y4K46bYgTcmNnHs"
-DB_PROD_DATABASE="DB_PROD"
+DB_PROD_DATABASE="DB_PROD_LIVE"
 
 # Database environment from knexfile to be used.
 DB_ENVIRONMENT="development"
