--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Base URL app will be served at. Use localhost for local development, your domain for production.
-APP_HOST_URL="https://copyhack.ondigitalocean.app/"
+APP_HOST_URL="https://copyhack-sbiuh.ondigitalocean.app"
 
 # Disable sign ups. Good for testing in production before initial launch.
 APP_SIGNUP_ENABLED="true"
@@ -23,14 +23,12 @@ COMPANY_LEGAL_NAME="Hubmind LLC"
 COMPANY_GENERAL_EMAIL="hello@copyhack.com"
 
 # Development database config.
-DB_PORT="25060"
 DB_DEV_HOST="db-postgresql-nyc1-do-user-10528061-0.b.db.ondigitalocean.com"
 DB_DEV_USER="doadmin"
 DB_DEV_PASSWORD="AVNS_hFsDkFF_E0fLQ-Rfx3-"
 DB_DEV_DATABASE="DB_DEV_LIVE"
 
 # Production database config.
-DB_PORT="25060"
 DB_PROD_HOST="db-postgresql-nyc1-do-user-10528061-0.b.db.ondigitalocean.com"
 DB_PROD_USER="doadmin"
 DB_PROD_PASSWORD="AVNS_hFsDkFF_E0fLQ-Rfx3-"
