--- a/.env
+++ b/.env
@@ -23,13 +23,13 @@ COMPANY_LEGAL_NAME="Hubmind LLC"
 COMPANY_GENERAL_EMAIL="hello@copyhack.com"
 
 # Development database config.
-DB_DEV_HOST="db-postgresql-nyc1-do-user-10528061-0.b.db.ondigitalocean.com"
+DB_DEV_HOST="db-postgresql-nyc1-do-user-10528061-0.b.db.ondigitalocean.com:25060"
 DB_DEV_USER="doadmin"
 DB_DEV_PASSWORD="AVNS_hFsDkFF_E0fLQ-Rfx3-"
 DB_DEV_DATABASE="DB_DEV_LIVE"
 
 # Production database config.
-DB_PROD_HOST="db-postgresql-nyc1-do-user-10528061-0.b.db.ondigitalocean.com"
+DB_PROD_HOST="db-postgresql-nyc1-do-user-10528061-0.b.db.ondigitalocean.com:25060"
 DB_PROD_USER="doadmin"
 DB_PROD_PASSWORD="AVNS_hFsDkFF_E0fLQ-Rfx3-"
 DB_PROD_DATABASE="DB_PROD_LIVE"
