--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ APP_SIGNUP_ENABLED="true"
 APP_HTTPS_ONLY="false"
 
 # Randomly generated secret key for Express session.
-APP_SECRET="TjWnZr4u7x!A%D*F-JaNdRgUkXp2s5v8"
+APP_SECRET=""
 
 # Logging config, see Pino for details: https://getpino.io/#/docs/api?id=loggerlevel-string-gettersetter.
 LOGGER_LEVEL="info"
@@ -23,13 +23,13 @@ COMPANY_LEGAL_NAME="Hubmind LLC"
 COMPANY_GENERAL_EMAIL="hello@copyhack.com"
 
 # Development database config.
-DB_DEV_HOST="db-postgresql-nyc1-do-user-10528061-0.b.db.ondigitalocean.com:25060"
+DB_DEV_HOST="db-postgresql-nyc1-do-user-10528061-0.b.db.ondigitalocean.com"
 DB_DEV_USER="doadmin"
 DB_DEV_PASSWORD="AVNS_hFsDkFF_E0fLQ-Rfx3-"
 DB_DEV_DATABASE="DB_DEV_LIVE"
 
 # Production database config.
-DB_PROD_HOST="db-postgresql-nyc1-do-user-10528061-0.b.db.ondigitalocean.com:25060"
+DB_PROD_HOST="db-postgresql-nyc1-do-user-10528061-0.b.db.ondigitalocean.com"
 DB_PROD_USER="doadmin"
 DB_PROD_PASSWORD="AVNS_hFsDkFF_E0fLQ-Rfx3-"
 DB_PROD_DATABASE="DB_PROD_LIVE"
@@ -38,7 +38,7 @@ DB_PROD_DATABASE="DB_PROD_LIVE"
 DB_ENVIRONMENT="development"
 
 # Randomly generated secret key used for machine to machine authentication.
-OPS_AUTH_KEY=")H@McQfTjWnZq4t7w!z%C*F-JaNdRgUk"
+OPS_AUTH_KEY=""
 
 # Email config.
 EMAIL_SMTP_HOST="smtp.mailgun.org"
@@ -53,7 +53,7 @@ STRIPE_SECRET_KEY="sk_test_N0QAhOehRWyyt0F1iPtTITK500v23oTa1j"
 STRIPE_WEBHOOK_SECRET="whsec_rDTOuNn8Yber6wHfAxEeqNF4dn0YpRIg"
 
 # Cookie used for Jest tests.
-TEST_COOKIE="connect.sid=G22wOJoUAhhemRQqCs7dAGlMIk5ZGaJUg"
+TEST_COOKIE="connect.sid="
 
 # Randomly generated secret key used by crypto utility.
-CRYPTO_KEY="?NcRfUjXn2r5u8x/A?D*G-KaPdSgVkYp3"
+CRYPTO_KEY=""
