Update and rename .env_template to .env

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ APP_SIGNUP_ENABLED="true"
 APP_HTTPS_ONLY="false"
 
 # Randomly generated secret key for Express session.
-APP_SECRET=""
+APP_SECRET="H@McQfTjWnZr4u7w!z%C*F-JaNdRgUkX"
 
 # Logging config, see Pino for details: https://getpino.io/#/docs/api?id=loggerlevel-string-gettersetter.
 LOGGER_LEVEL="info"
@@ -38,7 +38,7 @@ DB_PROD_DATABASE="DB_PROD_LIVE"
 DB_ENVIRONMENT="development"
 
 # Randomly generated secret key used for machine to machine authentication.
-OPS_AUTH_KEY=""
+OPS_AUTH_KEY="q3t6w9z$C&E)H@McQfTjWnZr4u7x!A%D"
 
 # Email config.
 EMAIL_SMTP_HOST="smtp.mailgun.org"
@@ -53,7 +53,7 @@ STRIPE_SECRET_KEY="sk_test_N0QAhOehRWyyt0F1iPtTITK500v23oTa1j"
 STRIPE_WEBHOOK_SECRET="whsec_rDTOuNn8Yber6wHfAxEeqNF4dn0YpRIg"
 
 # Cookie used for Jest tests.
-TEST_COOKIE="connect.sid="
+TEST_COOKIE="connect.sid=1122"
 
 # Randomly generated secret key used by crypto utility.
-CRYPTO_KEY=""
+CRYPTO_KEY="y$B&E)H@McQfThWmZq4t7w!z%C*F-JaN"
