--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ DB_PROD_DATABASE="DB_PROD_LIVE"
 DB_ENVIRONMENT="development"
 
 # Randomly generated secret key used for machine to machine authentication.
-OPS_AUTH_KEY="q3t6w9z$C&E)H@McQfTjWnZr4u7x!A%D"
+OPS_AUTH_KEY="q3t6w9z45&E)H@McQfTjWnZr4u7x!A%D"
 
 # Email config.
 EMAIL_SMTP_HOST="smtp.mailgun.org"
@@ -56,4 +56,4 @@ STRIPE_WEBHOOK_SECRET="whsec_rDTOuNn8Yber6wHfAxEeqNF4dn0YpRIg"
 TEST_COOKIE="connect.sid=1122"
 
 # Randomly generated secret key used by crypto utility.
-CRYPTO_KEY="y$B&E)H@McQfThWmZq4t7w!z%C*F-JaN"
+CRYPTO_KEY="y45&E)H@McQfThWmZq4t7w!z%C*F-JaN"
