--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Base URL app will be served at. Use localhost for local development, your domain for production.
-APP_HOST_URL="dolphin-app-b9es7.ondigitalocean.app"
+APP_HOST_URL="copyhack.onrender.com"
 
 # Disable sign ups. Good for testing in production before initial launch.
 APP_SIGNUP_ENABLED="true"
