--- a/.env
+++ b/.env
@@ -23,18 +23,23 @@ COMPANY_LEGAL_NAME="Hubmind LLC"
 COMPANY_GENERAL_EMAIL="hello@copyhack.com"
 
 # Development database config.
-DB_DEV_HOST="dbamzcopyhack-1.cx4u55trsavx.us-west-2.rds.amazonaws.com"
+#DB_DEV_HOST="dbamzcopyhack-1.cx4u55trsavx.us-west-2.rds.amazonaws.com"
+#DB_DEV_PORT="5432"
+#DB_DEV_USER="doadmin"
+#DB_DEV_PASSWORD="AVNS_Cvj2y4K46bYgTcmNnHs"
+#DB_DEV_DATABASE="dbdev"
+DB_DEV_HOST="ddpg-cd749482i3mt3nk6spd0-a.oregon-postgres.render.com"
 DB_DEV_PORT="5432"
 DB_DEV_USER="doadmin"
-DB_DEV_PASSWORD="AVNS_Cvj2y4K46bYgTcmNnHs"
-DB_DEV_DATABASE="dbdev"
+DB_DEV_PASSWORD="FRZk0H0bBWFwYZgALshWRqUn8gvRy27g"
+DB_DEV_DATABASE="dbdev_ja9v"
 
-# Production database config.
-DB_PROD_HOST="dbamzcopyhack-1.cx4u55trsavx.us-west-2.rds.amazonaws.com"
+# Production database config. 
+DB_PROD_HOST="ddpg-cd749482i3mt3nk6spd0-a.oregon-postgres.render.com"
 DB_PROD_PORT="5432"
 DB_PROD_USER="doadmin"
-DB_PROD_PASSWORD="AVNS_Cvj2y4K46bYgTcmNnHs"
-DB_PROD_DATABASE="dbprod"
+DB_PROD_PASSWORD="FRZk0H0bBWFwYZgALshWRqUn8gvRy27g"
+DB_PROD_DATABASE="dbdev_ja9v"
 
 # Database environment from knexfile to be used.
 DB_ENVIRONMENT="production"
