--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ APP_SIGNUP_ENABLED="true"
 APP_HTTPS_ONLY="false"
 
 # Randomly generated secret key for Express session.
-APP_SECRET="TjWnZr4u7x!A%D*F-JaNdRgUkXp2s5v8"
+APP_SECRET=""
 
 # Logging config, see Pino for details: https://getpino.io/#/docs/api?id=loggerlevel-string-gettersetter.
 LOGGER_LEVEL="info"
@@ -45,13 +45,13 @@ DB_PROD_DATABASE="dbdev_ja9v"
 DB_ENVIRONMENT="production"
 
 # Randomly generated secret key used for machine to machine authentication.
-OPS_AUTH_KEY=")H@McQfTjWnZq4t7w!z%C*F-JaNdRgUk"
+OPS_AUTH_KEY=""
 
 # Email config.
 EMAIL_SMTP_HOST="smtp.mailgun.org"
 EMAIL_SMTP_PORT="587"
 EMAIL_SMTP_AUTH_USER="hello@mg.copyhack.com"
-EMAIL_SMTP_AUTH_PASS="a6405ef2146f9a86e0ad33ed3398a648-b0ed5083-3ab8f835"
+EMAIL_SMTP_AUTH_PASS="b3a387690ef441a836f22b7e21277a24-d117dd33-3c03d56a"
 EMAIL_FROM_ADDRESS="hello@copyhack.com"
 
 # Stripe secrets from Stipe console.
@@ -60,7 +60,7 @@ STRIPE_SECRET_KEY="sk_test_N0QAhOehRWyyt0F1iPtTITK500v23oTa1j"
 STRIPE_WEBHOOK_SECRET="whsec_rDTOuNn8Yber6wHfAxEeqNF4dn0YpRIg"
 
 # Cookie used for Jest tests.
-TEST_COOKIE="connect.sid=G22wOJoUAhhemRQqCs7dAGlMIk5ZGaJUg"
+TEST_COOKIE="connect.sid=G22"
 
 # Randomly generated secret key used by crypto utility.
-CRYPTO_KEY="?NcRfUjXn2r5u8x/A?D*G-KaPdSgVkYp3"
+CRYPTO_KEY=""
