--- a/.env
+++ b/.env
@@ -2,13 +2,13 @@
 APP_HOST_URL="copyhack.onrender.com"
 
 # Disable sign ups. Good for testing in production before initial launch.
-APP_SIGNUP_ENABLED="true"
+APP_SIGNUP_ENABLED="true"https://github.com/hubmindai/CopyHack-Turbo/blob/main/.env
 
 # Only allow HTTPS, disable for local development.
 APP_HTTPS_ONLY="false"
 
 # Randomly generated secret key for Express session.
-APP_SECRET=""
+APP_SECRET="431AFD29E584EF8E"
 
 # Logging config, see Pino for details: https://getpino.io/#/docs/api?id=loggerlevel-string-gettersetter.
 LOGGER_LEVEL="info"
@@ -45,7 +45,7 @@ DB_PROD_DATABASE="dbdev_ja9v"
 DB_ENVIRONMENT="production"
 
 # Randomly generated secret key used for machine to machine authentication.
-OPS_AUTH_KEY=""
+OPS_AUTH_KEY="268EABF76E681DDA"
 
 # Email config.
 EMAIL_SMTP_HOST="smtp.mailgun.org"
@@ -63,4 +63,4 @@ STRIPE_WEBHOOK_SECRET="whsec_rDTOuNn8Yber6wHfAxEeqNF4dn0YpRIg"
 TEST_COOKIE="connect.sid=G22"
 
 # Randomly generated secret key used by crypto utility.
-CRYPTO_KEY=""
+CRYPTO_KEY="D81B932188281E1E"
