--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 APP_HOST_URL="copyhack.onrender.com"
 
 # Disable sign ups. Good for testing in production before initial launch.
-APP_SIGNUP_ENABLED="true"https://github.com/hubmindai/CopyHack-Turbo/blob/main/.env
+APP_SIGNUP_ENABLED="true"
 
 # Only allow HTTPS, disable for local development.
 APP_HTTPS_ONLY="false"
