--- a/.env
+++ b/.env
@@ -60,7 +60,7 @@ STRIPE_SECRET_KEY="sk_test_N0QAhOehRWyyt0F1iPtTITK500v23oTa1j"
 STRIPE_WEBHOOK_SECRET="whsec_rDTOuNn8Yber6wHfAxEeqNF4dn0YpRIg"
 
 # Cookie used for Jest tests.
-TEST_COOKIE="connect.sid=G22"
+TEST_COOKIE="connect.sid=99965E43-C535-49F6-900C-2FFE77002549"
 
 # Randomly generated secret key used by crypto utility.
 CRYPTO_KEY="D81B932188281E1E"
