--- a/.env
+++ b/.env
@@ -28,14 +28,14 @@ COMPANY_GENERAL_EMAIL="hello@copyhack.com"
 #DB_DEV_USER="doadmin"
 #DB_DEV_PASSWORD="AVNS_Cvj2y4K46bYgTcmNnHs"
 #DB_DEV_DATABASE="dbdev"
-DB_DEV_HOST="dpg-cd749482i3mt3nk6spd0-a.oregon-postgres.render.com"
+DB_DEV_HOST="postgres://dpg-cd749482i3mt3nk6spd0-a.oregon-postgres.render.com"
 #DB_DEV_PORT="5432"
 DB_DEV_USER="doadmin"
 DB_DEV_PASSWORD="FRZk0H0bBWFwYZgALshWRqUn8gvRy27g"
 DB_DEV_DATABASE="dbdev_ja9v"
 
 # Production database config. 
-DB_PROD_HOST="dpg-cd749482i3mt3nk6spd0-a.oregon-postgres.render.com"  
+DB_PROD_HOST="postgres://dpg-cd749482i3mt3nk6spd0-a.oregon-postgres.render.com"  
 #DB_PROD_PORT="5432"
 DB_PROD_USER="doadmin"
 DB_PROD_PASSWORD="FRZk0H0bBWFwYZgALshWRqUn8gvRy27g"
