--- a/.env
+++ b/.env
@@ -35,8 +35,8 @@ DB_DEV_PASSWORD="FRZk0H0bBWFwYZgALshWRqUn8gvRy27g"
 DB_DEV_DATABASE="dbdev_ja9v"
 
 # Production database config. 
-DB_PROD_HOST="postgres://dpg-cd749482i3mt3nk6spd0-a.oregon-postgres.render.com"  
-#DB_PROD_PORT="5432"
+DB_PROD_HOST="postgres://doadmin:FRZk0H0bBWFwYZgALshWRqUn8gvRy27g@dpg-cd749482i3mt3nk6spd0-a.oregon-postgres.render.com/dbdev_ja9v"  
+DB_PROD_PORT="5432"
 DB_PROD_USER="doadmin"
 DB_PROD_PASSWORD="FRZk0H0bBWFwYZgALshWRqUn8gvRy27g"
 DB_PROD_DATABASE="dbdev_ja9v"
